Project index in progress

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,4 +2,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "./font-css/LineIcons.css";
 @import "~react-datepicker/dist/react-datepicker.css";
