--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,3 +5,19 @@
 @import "./font-css/LineIcons.css";
 @import "~react-datepicker/dist/react-datepicker.css";
 @import 'react-toastify/dist/ReactToastify.css';
+
+.loader {
+    border-top-color: #3498db;
+    -webkit-animation: spinner 1.5s linear infinite;
+    animation: spinner 1.5s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spinner {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
